--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
 body {
 background-image: url("emilia-about.jpg");
-background-size: cover;
+background-size: 70%;
+background-repeat: no-repeat;
+background-position: right;
+font-family: 'Raleway', sans-serif;
 }
+#button {
+ padding: 0;
+ font-size: 8px;
+ text-align: right;
+ background-color: white;
+ color: black;
+ opacity: 0.6;
+ }
+ #button li {
+ display: inline;
+ }
